--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
    })(window,document,'script','dataLayer','GTM-ND4CTK2S');</script>
    <!-- End Google Tag Manager -->
       <meta charset="utf-8">
-      <title>Accueil | TaxisToMarrakech</title>
+      <title>Taxi Marrakech | Tarifs et Réservation - TaxisToMarrakech.com</title>
       <meta name="google-site-verification" content="GRZ9ySvws2Nm9xW0L6PGR8Loskn_DLAZT9tRLT24QTs" />
       <meta content="width=device-width,initial-scale=1" name="viewport">
-      <meta content="Page d'accueil | TaxisToMarrakech" property="og:title">
+      <meta content="Taxi Marrakech | Tarifs et Réservation - TaxisToMarrakech.com" property="og:title">
       <meta content="/images/menulogo.webp" property="og:image">
-      <meta content="Page d'accueil | TaxisToMarrakech" property="twitter:title">
+      <meta content="Taxi Marrakech | Tarifs et Réservation - TaxisToMarrakech.com" property="twitter:title">
       <meta content="/images/menulogo.webp" property="twitter:image">
       <meta name="description" lang="en" content="Book a reliable taxi service for hassle-free transfers between Marrakech and Essaouira. Our experienced drivers offer convenient transportation options, including Essaouira-Marrakech taxi services, transfers from Essaouira to Marrakech, and efficient taxis to and from Essaouira Airport. Discover the beauty of Morocco with our day trips from Marrakech to Essaouira. Whether you need a taxi from Casablanca Airport, want to explore Marrakech with a taxi, or plan a transfer from Marrakech to Essaouira, we've got you covered. Explore the best taxi options in Morocco with us!">
       <meta name="description" lang="fr" content="Réservez un service de taxi fiable pour des transferts sans tracas entre Marrakech et Essaouira. Nos chauffeurs expérimentés offrent des options de transport pratiques, y compris des services de taxi Essaouira-Marrakech, des transferts d'Essaouira à Marrakech, et des taxis efficaces vers et depuis l'aéroport d'Essaouira. Découvrez la beauté du Maroc avec nos excursions d'une journée de Marrakech à Essaouira. Que vous ayez besoin d'un taxi depuis l'aéroport de Casablanca, que vous souhaitiez explorer Marrakech avec un taxi, ou planifier un transfert de Marrakech à Essaouira, nous avons tout ce qu'il vous faut. Explorez les meilleures options de taxi au Maroc avec nous !">
