--- a/public/index.html
+++ b/public/index.html
@@ -283,9 +283,11 @@
             <div class="intro-mask"><img src="/images/mainphoto.webp" loading="eager" alt="une voiture" sizes="100vw" srcset="/images/mainphoto_500.webp 500w, /images/mainphoto_800.webp 800w, /images/mainphoto_1080.webp 1080w, /images/mainphoto_1250.webp 1250w, /images/mainphoto_1950.webp 1950w" class="intro-image"></div>
             <header style="opacity:0" class="container atf-container">
                <div class="header-wrapper">
-                  <div class="atf-text light">Service de Taxi <br>à Marrakech</div>
-                  <h1 class="h1 discover fade-up tricks light"><span class="text-span">Réservez </span>avec<br>Taxis to Marrakech. </h1>
-               </div>
+                  <h2 class="atf-text light">Service de Taxi à Marrakech</h2>
+                  <h1 class="h1 discover fade-up tricks light">
+                     <span class="text-span">Réservez </span>avec<br>Taxis to Marrakech
+                  </h1>
+               </div>               
                <div class="arrow-down-wrapper">
                   <a href="#" data-w-id="4f7809ac-83b0-ccad-e564-545fff0664ec" style="-webkit-transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-moz-transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-ms-transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);opacity:0" class="arrow-down-block w-inline-block"><img src="/images/downarrow2.svg" loading="lazy" style="-webkit-transform:translate3d(0,0,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-moz-transform:translate3d(0,0,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-ms-transform:translate3d(0,0,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);transform:translate3d(0,0,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0)" data-w-id="5546442c-0698-c251-8814-863f0ea8fae6" alt="icon" class="arrow-down"></a>
                   <div class="line-dashed">
