--- a/public/index.html
+++ b/public/index.html
@@ -280,7 +280,7 @@
             </div>
          </div>
          <section data-w-id="65386865-9539-677f-350b-9826b49ac691" class="section atf">
-            <div class="intro-mask"><img src="/images/mainphoto.webp" loading="eager" alt="une voiture" sizes="100vw" srcset="/images/mainphoto_500.webp 500w, /images/mainphoto_800.webp 800w, /images/mainphoto_1080.webp 1080w, /images/mainphoto_1250.webp 1250w, /images/mainphoto_1950.webp 1950w" class="intro-image"></div>
+            <div class="intro-mask"><img src="/images/mainphoto.webp" loading="eager" alt="Service de taxi à Marrakech - Taxis to Marrakech" sizes="100vw" srcset="/images/mainphoto_500.webp 500w, /images/mainphoto_800.webp 800w, /images/mainphoto_1080.webp 1080w, /images/mainphoto_1250.webp 1250w, /images/mainphoto_1950.webp 1950w" class="intro-image"></div>
             <header style="opacity:0" class="container atf-container">
                <div class="header-wrapper">
                   <h2 class="atf-text light">Service de Taxi à Marrakech</h2>
@@ -296,13 +296,13 @@
                </div>
             </header>
          </section>
-         <section id="" class="section f0f1ec">
+         <section id="taxi-services" class="section f0f1ec">
             <div class="container _300px limit-container">
                <div class="sticky-container-2">
                   <div class="sticky-block">
                      <div class="sticky-text-block-2">
                         <div class="sub-header"></div>
-                        <h3 class="h2 btf-custom">Des Kilomètres de Sourires avec Nous</h3>
+                        <h3 class="h2 btf-custom">Des Kilomètres de Sourires avec Notre Service de Taxi à Marrakech</h3>
                      </div>
                      <div data-w-id="bd986ab6-e8f2-1ec5-8492-3d375ec1149a" class="sticky-info-wrapper">
                         <div class="sticky-moving-2">
@@ -310,89 +310,120 @@
                               <div class="image-contain-home">
                                  <div class="image-holder _1">
                                     <div style="opacity:0" class="custom-travel" id="dis">
-                                       <div class="custom-travel"><img src="/images/equipe.webp" loading="lazy" alt="notre chauffeur à l'aéroport attend un client" sizes="(max-width: 767px) 100vw, (max-width: 991px) 48vw, 60vw" srcset="/images/equipe_500x667.webp 500w, /images/equipe.webp 1250w" class="image home-stick"></div>
+                                       <div class="custom-travel">
+                                          <img src="/images/equipe.webp" loading="lazy" alt="notre chauffeur à l'aéroport attend un client" 
+                                             sizes="(max-width: 767px) 100vw, (max-width: 991px) 48vw, 60vw" 
+                                             srcset="/images/equipe_500x667.webp 500w, /images/equipe.webp 1250w" 
+                                             class="image home-stick">
+                                       </div>
                                     </div>
                                  </div>
                                  <div class="image-holder _2">
                                     <div style="opacity:0" class="local-guides">
-                                       <div class="local-guides"><img src="/images/car.webp" loading="lazy" alt="une de nos voitures" class="image home-stick"></div>
+                                       <div class="local-guides">
+                                          <img src="/images/car.webp" loading="lazy" alt="une de nos voitures à Marrakech" 
+                                             class="image home-stick">
+                                       </div>
                                     </div>
                                  </div>
                                  <div class="image-holder _3">
                                     <div style="opacity:0" class="skip-the-lines">
-                                       <div class="skip-the-lines"><img src="/images/airport.webp" loading="lazy" alt="airport de marrakech" class="image home-stick image-right"></div>
+                                       <div class="skip-the-lines">
+                                          <img src="/images/airport.webp" loading="lazy" alt="taxi Marrakech aéroport" 
+                                             class="image home-stick image-right">
+                                       </div>
                                     </div>
                                  </div>
                                  <div class="image-holder _4">
                                     <div style="opacity:0" class="authentic-accom">
-                                       <div class="authentic-accom"><img src="/images/night.webp" loading="lazy" alt="nos voitures" class="image home-stick image-right"></div>
+                                       <div class="authentic-accom">
+                                          <img src="/images/night.webp" loading="lazy" alt="taxi à Marrakech pour un transfert aéroport" 
+                                             class="image home-stick image-right">
+                                       </div>
                                     </div>
                                  </div>
                               </div>
                            </div>
                            <div class="drawing-lines-lottie-2">
-                              <img src="/images/ligne.png" loading="lazy" alt="des lignes de decoration" sizes="100vw" srcset="/images/ligne-500 500w, /images/ligne-800 800w, /images/ligne.png 802w" class="draw-lottie-2">
-                              <div data-is-ix2-target="1" class="btf-lottie" data-w-id="bd986ab6-e8f2-1ec5-8492-3d375ec114ac" data-animation-type="lottie" data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="3" data-duration="0"></div>
+                              <img src="/images/ligne.png" loading="lazy" alt="des lignes de decoration" 
+                                 sizes="100vw" 
+                                 srcset="/images/ligne-500 500w, /images/ligne-800 800w, /images/ligne.png 802w" 
+                                 class="draw-lottie-2">
+                              <div data-is-ix2-target="1" class="btf-lottie" 
+                                 data-w-id="bd986ab6-e8f2-1ec5-8492-3d375ec114ac" 
+                                 data-animation-type="lottie" data-loop="0" data-direction="1" 
+                                 data-autoplay="0" data-renderer="svg" data-default-duration="3" 
+                                 data-duration="0"></div>
                            </div>
                         </div>
                         <div class="sticky-content-stack-2">
-                           <div id="Custom-Designed-Travel" data-w-id="bd986ab6-e8f2-1ec5-8492-3d375ec114ae" class="sticky-info-block-2">
+                           <div id="Custom-Designed-Travel" data-w-id="bd986ab6-e8f2-1ec5-8492-3d375ec114ae" 
+                              class="sticky-info-block-2">
                               <div class="number-block">
                                  <div class="number-change-block">
-                                    <div class="number-text-2 dark">Service de taxi exceptionnel</div>
+                                    <div class="number-text-2 dark">Service de taxi exceptionnel à Marrakech</div>
                                  </div>
                                  <div class="number-text-2">/01</div>
                               </div>
                               <div class="btf-title-mask show-up">
                                  <h4 class="h4-2 bottom-40 fade-up3 tricks">Fiabilité<br>Exceptionnelle</h4>
                               </div>
-                              <p class="paragraph top-margin">Taxistomarrakech se distingue par sa fiabilité inébranlable. Nous sommes déterminés à assurer que vos déplacements se déroulent sans accroc, avec des conducteurs professionnels, des véhicules bien entretenus et un service ponctuel.</p>
+                              <p class="paragraph top-margin">Avec Taxistomarrakech, bénéficiez d'un service de taxi à Marrakech fiable et ponctuel. Que ce soit pour un transfert depuis ou vers l’aéroport de Marrakech ou une réservation taxi Marrakech pour vos déplacements en ville, nous garantissons un service sans faille.</p>
                            </div>
-                           <div id="Local-Guides" data-w-id="bd986ab6-e8f2-1ec5-8492-3d375ec114bc" class="sticky-info-block-2">
+                           <div id="Local-Guides" data-w-id="bd986ab6-e8f2-1ec5-8492-3d375ec114bc" 
+                              class="sticky-info-block-2">
                               <div class="number-block">
                                  <div class="number-change-block">
-                                    <div class="number-text-2 dark">Service de taxi exceptionnel</div>
+                                    <div class="number-text-2 dark">Taxi Marrakech - Confort Optimal</div>
                                  </div>
                                  <div class="number-text-2">/02</div>
                               </div>
                               <div class="btf-title-mask show-up2">
                                  <h4 class="h4-2 bottom-40 fade-up4 tricks">Confort Optimal</h4>
                               </div>
-                              <p class="paragraph top-margin">Nous nous engageons à vous offrir une expérience de voyage confortable. Nos véhicules modernes et climatisés garantissent un environnement agréable tout au long de votre trajet. Nous mettons tout en œuvre pour que chaque kilomètre soit aussi plaisant que possible.</p>
+                              <p class="paragraph top-margin">Nos taxis à Marrakech sont équipés de véhicules modernes et climatisés, pour un trajet agréable. Réservez votre taxi Marrakech pour un confort optimal, que ce soit pour un transfert à l’aéroport de Marrakech ou pour vos déplacements dans la ville.</p>
                            </div>
-                           <div id="Skip-The-Lines" data-w-id="bd986ab6-e8f2-1ec5-8492-3d375ec114c8" class="sticky-info-block-2">
+                           <div id="Skip-The-Lines" data-w-id="bd986ab6-e8f2-1ec5-8492-3d375ec114c8" 
+                              class="sticky-info-block-2">
                               <div class="number-block">
                                  <div class="number-change-block">
-                                    <div class="number-text-2 dark">Service de taxi exceptionnel</div>
+                                    <div class="number-text-2 dark">Service de taxi à Marrakech flexible</div>
                                  </div>
                                  <div class="number-text-2">/03</div>
                               </div>
                               <div class="btf-title-mask show-up3">
                                  <h4 class="h4-2 bottom-40 fade-up5 tricks">Flexibilité Personnalisée</h4>
                               </div>
-                              <p class="paragraph top-margin">Chez Taxistomarrakech, nous comprenons que chaque voyageur a des besoins uniques. Notre service de taxi offre une flexibilité personnalisée pour répondre à vos exigences spécifiques, que ce soit pour des circuits touristiques, des transferts aéroport, ou des déplacements entre les villes. Nous sommes là pour adapter nos services à vos besoins individuels.</p>
+                              <p class="paragraph top-margin">Que ce soit pour une réservation taxi Marrakech ou pour des transferts personnalisés vers Marrakech aéroport, nous vous offrons une flexibilité complète. Réservez votre taxi Marrakech selon vos horaires et besoins spécifiques.</p>
                            </div>
-                           <div id="Authentic-Accommodations" data-w-id="bd986ab6-e8f2-1ec5-8492-3d375ec114d4" class="sticky-info-block-2">
+                           <div id="Authentic-Accommodations" data-w-id="bd986ab6-e8f2-1ec5-8492-3d375ec114d4" 
+                              class="sticky-info-block-2">
                               <div class="number-block">
                                  <div class="number-change-block">
-                                    <div class="number-text-2 dark">Service de taxi exceptionnel</div>
+                                    <div class="number-text-2 dark">Tarifs Transparents et Compétitifs</div>
                                  </div>
                                  <div class="number-text-2">/04</div>
                               </div>
                               <div class="btf-title-mask show-up4">
-                                 <h4 class="h4-2 bottom-40 fade-up6 tricks">Tarifs Transparents<br>et Compétitifs</h4>
+                                 <h4 class="h4-2 bottom-40 fade-up6 tricks">Tarifs Clairs et Compétitifs</h4>
                               </div>
-                              <p class="paragraph top-margin">Chez Taxistomarrakech, la transparence est au cœur de notre philosophie. Nos tarifs sont clairs, compétitifs et détaillés, éliminant toute surprise désagréable. Nous croyons en l'honnêteté et en la clarté pour instaurer une confiance totale avec nos clients.</p>
+                              <p class="paragraph top-margin">Chez Taxistomarrakech, nous vous garantissons des tarifs de taxi Marrakech transparents et compétitifs. Vous connaîtrez toujours les coûts de votre réservation taxi Marrakech à l’avance, que ce soit pour un transfert aéroport de Marrakech ou tout autre service de transport.</p>
                            </div>
                         </div>
                         <div class="quick-jump-container">
-                           <div class="jump-dots-wrapper"><a href="#Custom-Designed-Travel" data-w-id="bd986ab6-e8f2-1ec5-8492-3d375ec114e7" class="quick-jump-dot w-inline-block">.</a><a href="#Local-Guides" class="quick-jump-dot w-inline-block">.</a><a href="#Skip-The-Lines" class="quick-jump-dot w-inline-block">.</a><a href="#Authentic-Accommodations" class="quick-jump-dot w-inline-block">.</a></div>
+                           <div class="jump-dots-wrapper">
+                              <a href="#Custom-Designed-Travel" data-w-id="bd986ab6-e8f2-1ec5-8492-3d375ec114e7" 
+                                 class="quick-jump-dot w-inline-block">.</a>
+                              <a href="#Local-Guides" class="quick-jump-dot w-inline-block">.</a>
+                              <a href="#Skip-The-Lines" class="quick-jump-dot w-inline-block">.</a>
+                              <a href="#Authentic-Accommodations" class="quick-jump-dot w-inline-block">.</a>
+                           </div>
                         </div>
                      </div>
                   </div>
                </div>
             </div>
-         </section>
+         </section>         
          <section class="section no-overflow">
          <div data-w-id="2eda99a5-cdcc-dd69-e516-25f635107fd3" class="container">
             <div data-is-ix2-target="1" class="types-home-lottie" data-w-id="7fe478f3-99a7-61fa-7976-3aa13cfe0bff" data-animation-type="lottie" data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="3" data-duration="0" data-ix2-initial-state="0"></div>
