--- a/public/index.html
+++ b/public/index.html
@@ -733,7 +733,7 @@
                      <div class="title-block">
                         <div class="sub-header no-margin">Etapes</div>
                      </div>
-                     <h2 class="h2">Comment Ça<br>Marche</h2>
+                     <h2 class="h2">Comment Réserver un Taxi à Marrakech<br>Facilement</h2>
                   </div>
                </div>
                <div class="rotating-slider-wrapper">
@@ -786,16 +786,16 @@
                            <div class="step-content">
                               <div class="step-wrap">
                                  <div class="small-text">Etape 1</div>
-                                 <h5 class="h5 darker">Contact Direct</h5>
+                                 <h5 class="h5 darker">Dis bonjour et Présentez Votre Besoin</h5>
                               </div>
-                              <p class="paragraph">Pour réserver votre trajet avec Taxistomarrakech, vous avez le choix entre trois modes de contact : WhatsApp, e-mail ou appel téléphonique. Envoyez-nous un message sur WhatsApp, un e-mail détaillé ou appelez notre équipe dédiée pour initier le processus de réservation<a href="contact.html">(Page de contact)</a>.</p>
+                              <p class="paragraph">Commencez par discuter de vos besoins de transport avec notre équipe dédiée. Nous nous assurons que nous comprenons parfaitement votre demande pour vous offrir la meilleure solution.<a href="contact.html">(Page de contact)</a>.</p>
                            </div>
                         </div>
                         <div style="opacity:0" class="rotating-slide-content _2">
                            <div class="step-content">
                               <div class="step-wrap">
                                  <div class="small-text">Etape 2</div>
-                                 <h5 class="h5 darker">Réponse Rapide et Personnalisée</h5>
+                                 <h5 class="h5 darker">Contact Direct pour Réserver un Taxi à Marrakech</h5>
                               </div>
                               <p class="paragraph">Dès réception de votre message ou appel, notre équipe réactive vous contactera rapidement pour confirmer la disponibilité, discuter des détails spécifiques de votre trajet et vous fournir toutes les informations nécessaires. Nous nous efforçons de répondre à vos besoins de manière personnalisée.</p>
                            </div>
