--- a/public/index.html
+++ b/public/index.html
@@ -731,16 +731,16 @@
                <div class="title-container hiw-ver">
                   <div class="title-wrapper left align-smaller-screen">
                      <div class="title-block">
-                        <div class="sub-header no-margin">Etapes</div>
+                        <div class="sub-header no-margin">Étapes</div>
                      </div>
-                     <h2 class="h2">Comment Réserver un Taxi à Marrakech<br>Facilement</h2>
+                     <h2 class="h2">Comment fonctionne<br>notre service de taxi à Marrakech</h2>
                   </div>
                </div>
                <div class="rotating-slider-wrapper">
                   <div id="w-node-ac9554d5-7944-b7c8-0acf-16897b87e78e-d0c2d907" class="dot-content-container">
                      <div data-w-id="985580fa-c8d8-93c3-1db5-fb4b0ca81121" class="hiw-draw">
                         <img src="/images/shape.svg" loading="lazy" alt="icon" class="image">
-                        <div data-is-ix2-target="1" class="squiggle-animation" data-w-id="3ab608fb-612f-6f70-fa4e-c70589738693" data-animation-type="lottie" data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="3" data-duration="0" data-ix2-initial-state="0"></div>
+                        <div class="squiggle-animation" data-w-id="3ab608fb-612f-6f70-fa4e-c70589738693"></div>
                      </div>
                      <div style="opacity:0" class="circles-container">
                         <div class="circle-dot _01">
@@ -769,78 +769,86 @@
                            </div>
                         </div>
                      </div>
-                     <div class="dot-image-holder"><img src="/images/souk.webp" loading="lazy" alt="notre carte visite" class="image dot-image _1"><img src="/images/menulogo.webp" loading="lazy" style="-webkit-transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-moz-transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-ms-transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0)" alt="logo" class="image dot-image _2"><img src="/images/ball.webp" loading="lazy" style="-webkit-transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-moz-transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-ms-transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0)" alt="marrakech" class="image dot-image _3"><img src="/images/hands.webp" loading="lazy" style="-webkit-transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-moz-transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-ms-transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0)" alt="serrer des mains" class="image dot-image _4"><img src="/images/payment.webp" loading="lazy" style="-webkit-transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-moz-transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);-ms-transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0);transform:translate3d(0,50px,0) scale3d(1,1,1) rotateX(0) rotateY(0) rotateZ(0) skew(0,0)" alt="photo de paiement" class="image dot-image _5"></div>
+                     <div class="dot-image-holder">
+                        <img src="/images/souk.webp" loading="lazy" alt="notre carte visite" class="image dot-image _1">
+                        <img src="/images/menulogo.webp" loading="lazy" alt="logo" class="image dot-image _2">
+                        <img src="/images/ball.webp" loading="lazy" alt="Marrakech tour" class="image dot-image _3">
+                        <img src="/images/hands.webp" loading="lazy" alt="serrer des mains" class="image dot-image _4">
+                        <img src="/images/payment.webp" loading="lazy" alt="paiement" class="image dot-image _5">
+                     </div>
                   </div>
                   <div id="w-node-ced37ec1-1e9c-d494-029a-bb7763c4b8b4-d0c2d907" class="rotating-slider-left-side">
                      <div class="rotating-slide-content-wrapper">
                         <div class="rotating-slide-content invi">
                            <div class="step-content">
                               <div class="step-wrap">
-                                 <div class="small-text">Etape 1</div>
+                                 <div class="small-text">Étape 1</div>
                                  <h5 class="h5 darker">Dis bonjour</h5>
                               </div>
-                              <p class="paragraph">Nous discutons simplement de ce que vous cherchez à faire pendant votre voyage et nous assurons que nous sommes la bonne personne.</p>
+                              <p class="paragraph">Nous discutons de votre projet et des besoins spécifiques pour votre trajet à Marrakech. Nous nous assurons que nous sommes le bon choix pour votre transfert.</p>
                            </div>
                         </div>
                         <div class="rotating-slide-content _1">
                            <div class="step-content">
                               <div class="step-wrap">
-                                 <div class="small-text">Etape 1</div>
-                                 <h5 class="h5 darker">Dis bonjour et Présentez Votre Besoin</h5>
+                                 <div class="small-text">Étape 2</div>
+                                 <h5 class="h5 darker">Contact Direct</h5>
                               </div>
-                              <p class="paragraph">Commencez par discuter de vos besoins de transport avec notre équipe dédiée. Nous nous assurons que nous comprenons parfaitement votre demande pour vous offrir la meilleure solution.<a href="contact.html">(Page de contact)</a>.</p>
+                              <p class="paragraph">Pour réserver votre taxi à Marrakech avec Taxistomarrakech, contactez-nous via WhatsApp, email ou téléphone. Plus de détails sur notre <a href="contact.html">page de contact</a> pour plus d'informations.</p>
                            </div>
                         </div>
                         <div style="opacity:0" class="rotating-slide-content _2">
                            <div class="step-content">
                               <div class="step-wrap">
-                                 <div class="small-text">Etape 2</div>
-                                 <h5 class="h5 darker">Contact Direct pour Réserver un Taxi à Marrakech</h5>
+                                 <div class="small-text">Étape 3</div>
+                                 <h5 class="h5 darker">Réponse rapide et personnalisée</h5>
                               </div>
-                              <p class="paragraph">Dès réception de votre message ou appel, notre équipe réactive vous contactera rapidement pour confirmer la disponibilité, discuter des détails spécifiques de votre trajet et vous fournir toutes les informations nécessaires. Nous nous efforçons de répondre à vos besoins de manière personnalisée.</p>
+                              <p class="paragraph">Après réception de votre message ou appel, notre équipe vous répond rapidement pour confirmer la disponibilité et discuter des détails de votre trajet.</p>
                            </div>
                         </div>
                         <div style="opacity:0" class="rotating-slide-content _3">
                            <div class="step-content">
                               <div class="step-wrap">
-                                 <div class="small-text">Etape 3</div>
+                                 <div class="small-text">Étape 4</div>
                                  <h5 class="h5 darker">Confirmation de Réservation</h5>
                               </div>
-                              <p class="paragraph">Une fois que tous les détails sont confirmés et que nous avons convenu des arrangements, nous vous enverrons une confirmation de réservation par WhatsApp ou par e-mail. Cette confirmation comprendra toutes les informations cruciales, y compris le nom du chauffeur, les détails du véhicule et l'heure de prise en charge.</p>
+                              <p class="paragraph">Une fois tous les détails confirmés, vous recevrez une confirmation de réservation avec toutes les informations importantes, y compris le nom du chauffeur, le véhicule et l'heure de prise en charge.</p>
                            </div>
                         </div>
                         <div style="opacity:0" class="rotating-slide-content _4">
                            <div class="step-content">
                               <div class="step-wrap">
-                                 <div class="small-text">Etape 4</div>
-                                 <h5 class="h5 darker">Accueil et Trajet Serein</h5>
+                                 <div class="small-text">Étape 5</div>
+                                 <h5 class="h5">Paiement facile et retours appréciés</h5>
                               </div>
-                              <p class="paragraph">Le jour de votre trajet, notre chauffeur professionnel vous accueillera à l'endroit et à l'heure convenus. Installez-vous confortablement dans notre véhicule de qualité, prêt à profiter d'un trajet en toute sécurité vers votre destination.</p>
-                           </div>
-                        </div>
-                        <div style="opacity:0" class="rotating-slide-content _5">
-                           <div class="step-content">
-                              <div class="step-wrap">
-                                 <div class="small-text">Etape 5</div>
-                                 <h5 class="h5">Paiement Facile et Retours Appréciés</h5>
-                              </div>
-                              <p class="paragraph">À la fin de votre trajet, effectuez le paiement en espèces ou selon les modalités préalablement discutées. Nous vous encourageons à partager vos retours par WhatsApp, e-mail ou appel, car votre expérience est essentielle pour nous permettre de maintenir un service exceptionnel.</p>
+                              <p class="paragraph">Après le trajet, effectuez le paiement en espèces ou selon l'accord. Nous vous encourageons à nous faire part de vos retours pour améliorer nos services. Contactez-nous via WhatsApp, email ou téléphone.</p>
                            </div>
                         </div>
                      </div>
                      <div class="slider-arrow-block">
-                        <div class="arrow-contain invi"><a href="#" class="arrow-block steps-slider left-side not-active w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller _180degs"></a><a href="#" class="arrow-block steps-slider w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller"></a></div>
-                        <div class="arrow-contain _1"><a href="#" class="arrow-block steps-slider left-side not-active w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller _180degs"></a><a data-w-id="3e2cbef3-06b2-c142-8f51-ad9432cf860a" href="#" class="arrow-block steps-slider w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller"></a></div>
-                        <div class="arrow-contain _2"><a data-w-id="117805bc-de8e-85b3-30f1-4403862384a4" href="#" class="arrow-block steps-slider left-side w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller _180degs"></a><a data-w-id="117805bc-de8e-85b3-30f1-4403862384a6" href="#" class="arrow-block steps-slider w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller"></a></div>
-                        <div class="arrow-contain _3"><a data-w-id="b3f1ccc3-032c-e66d-e665-1f9fa35b7d18" href="#" class="arrow-block steps-slider left-side w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller _180degs"></a><a data-w-id="b3f1ccc3-032c-e66d-e665-1f9fa35b7d1a" href="#" class="arrow-block steps-slider w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller"></a></div>
-                        <div class="arrow-contain _4"><a data-w-id="e525b3b4-9bd3-91f5-e1fd-7ddef5b9d6d2" href="#" class="arrow-block steps-slider left-side w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller _180degs"></a><a data-w-id="e525b3b4-9bd3-91f5-e1fd-7ddef5b9d6d4" href="#" class="arrow-block steps-slider w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller"></a></div>
-                        <div class="arrow-contain _5"><a data-w-id="0ffbaf87-6205-8101-b785-e1424fcc02d4" href="#" class="arrow-block steps-slider left-side w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller _180degs"></a><a href="#" class="arrow-block steps-slider not-active w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller"></a></div>
+                        <div class="arrow-contain invi">
+                           <a href="#" class="arrow-block steps-slider left-side not-active w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller _180degs"></a>
+                           <a href="#" class="arrow-block steps-slider w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller"></a>
+                        </div>
+                        <div class="arrow-contain _1">
+                           <a href="#" class="arrow-block steps-slider left-side not-active w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller _180degs"></a>
+                           <a data-w-id="3e2cbef3-06b2-c142-8f51-ad9432cf860a" href="#" class="arrow-block steps-slider w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller"></a>
+                        </div>
+                        <div class="arrow-contain _2">
+                           <a data-w-id="117805bc-de8e-85b3-30f1-4403862384a4" href="#" class="arrow-block steps-slider left-side w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller _180degs"></a>
+                           <a data-w-id="117805bc-de8e-85b3-30f1-4403862384a6" href="#" class="arrow-block steps-slider w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller"></a>
+                        </div>
+                        <div class="arrow-contain _3">
+                           <a data-w-id="b3f1ccc3-032c-e66d-e665-1f9fa35b7d18" href="#" class="arrow-block steps-slider left-side w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller _180degs"></a>
+                           <a href="#" class="arrow-block steps-slider w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller"></a>
+                        </div>
                      </div>
                   </div>
                </div>
             </div>
          </div>
       </section>
+      
       <section class="section">
          <style>
             .testimonial{
