--- a/public/index.html
+++ b/public/index.html
@@ -733,7 +733,7 @@
                      <div class="title-block">
                         <div class="sub-header no-margin">Étapes</div>
                      </div>
-                     <h2 class="h2">Comment fonctionne<br>notre service de taxi à Marrakech</h2>
+                     <h2 class="h2">Comment fonctionne<br>notre service de taxi</h2>
                   </div>
                </div>
                <div class="rotating-slider-wrapper">
